<resources>
    <string name="app_name">Samples5</string>
    <string name="ex_001_first">001 Fragment</string>
    <string name="empty_text" />
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="log">Login</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="replace">Replace</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="ex_002_second">002 Add new Fragment</string>
    <string name="he">Hello</string>
    <string name="hello_activity">Hello Activity</string>
    <string name="hello_first_fragment">Hello First Fragment</string>
    <string name="hello_second_activity">Hello Second Fragment</string>
    <string name="ex_003_third">003 Fragments and Activity</string>
    <string name="text_fragent">Fragment</string>
    <string name="ex_004_four">004 Fragment Lifecycle</string>
    <string name="ex_005_send_data_from_activity">005 Data</string>
    <string name="register">Register</string>
    <string name="ex_006_register">006 Register</string>
    <string name="name">Name:</string>
    <string name="settings">Settings</string>
    <string name="ex_007_menu">007 Menu</string>
    <string name="about_author">About author</string>
    <string name="official_site">Official site</string>
    <string name="itstep">itstep.com</string>
    <string name="ex_008_tabs">008 Tabs</string>
    <string name="hello_world">Hello World</string>
    <string name="ex_009_night">009 List Navigation</string>
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="fragment">Fragment</string>
    <string name="visible">Show</string>
    <string name="add_del">Add</string>
    <string name="menu_item">Menu Item</string>
    <string name="ex_010_ten">010 Dinamic Fragment</string>
    <string name="action_mode">Add menu</string>
    <string name="item3">Item3</string>
    <string name="item4">Item4</string>
    <string name="ex_011_action_mode">011 Action Mode</string>
    <string name="message_text">You agree with us?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>
    <string name="dialog_1">First Dialog</string>
    <string name="dialog_2">Second Dialog</string>
    <string name="ex_012_twelve">012 Dialog Fragment</string>
</resources>
