<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <Button
            android:id="@+id/ex001_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ex_001_first"
            android:onClick="click" />

        <Button
            android:id="@+id/ex002_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ex_002_second"
            android:onClick="click" />

            <Button
                android:id="@+id/ex003_third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_003_third"
                android:onClick="click" />

            <Button
                android:id="@+id/ex004_fourth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_004_four"
                android:onClick="click" />


            <Button
                android:id="@+id/ex005_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_005_send_data_from_activity"
                android:onClick="click" />

            <Button
                android:id="@+id/ex006_six"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_006_register"
                android:onClick="click" />

            <Button
                android:id="@+id/ex007_seven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_007_menu"
                android:onClick="click" />

            <Button
                android:id="@+id/ex008_eight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_008_tabs"
                android:onClick="click" />

            <Button
                android:id="@+id/ex009_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_009_night"
                android:onClick="click" />

            <Button
                android:id="@+id/ex010_ten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_010_ten"
                android:onClick="click" />

            <Button
            android:id="@+id/ex011_eleven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ex_011_action_mode"
            android:onClick="click" />

            <Button
                android:id="@+id/ex012_twelve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_012_twelve"
                android:onClick="click" />



        </LinearLayout>

    </ScrollView>


</LinearLayout>